[package]
name = "bevy_phonon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio related stuff (todo: should ideally be only one or two deps)
# todo: crates.io only
bevy_fmod = { git = "https://github.com/Salzian/bevy_fmod", branch = "main", features = ["live-update"] }
phonon = { git = "https://github.com/GitGhillie/phonon_rs", features = ["reflect"] }
phonon-fmod = { git = "https://github.com/GitGhillie/phonon_rs" }

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_asset", "bevy_render"]
